trying to fix horizontal on iphone

--- a/src/components/viewWorkout/RestPage.scss
+++ b/src/components/viewWorkout/RestPage.scss
@@ -120,8 +120,7 @@
         }
 
         &__rest-controls{
-            width: 650px;
-            height: 98px;
+            width: 100%;
             
             &__icon {
                 width: 70px; // how far apart icons are from each other
