--- a/src/components/viewWorkout/YouTubePage.scss
+++ b/src/components/viewWorkout/YouTubePage.scss
@@ -85,8 +85,7 @@
         }
 
         &__youtube-controls{
-            width: 650px;
-            height: 98px;
+            width: 100%;
             
             &__icon {
                 width: 70px; // how far apart icons are from each other
